<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FirstTimeInit.WelcomeFinishActivity">

    <ImageView
        android:id="@+id/welcomeFinishImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/activity_pager_button_width"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_large"
        android:text="@string/welcome_finish_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeFinishImageView" />

    <Button
        android:id="@+id/welcomeFinishPreviousButton"
        android:layout_width="@dimen/activity_pager_button_width"
        android:layout_height="@dimen/activity_pager_button_height"
        android:layout_marginBottom="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium"
        android:text="@string/welcome_button_previous"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/welcomeFinishNextButton"
        android:layout_width="@dimen/activity_pager_button_width"
        android:layout_height="@dimen/activity_pager_button_height"
        android:layout_marginBottom="@dimen/activity_margin_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium"
        android:text="@string/welcome_button_finish"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>