<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FirstTimeInit.WelcomeReasonActivity">

    <ImageView
        android:id="@+id/welcomeReasonImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/activity_pager_button_width"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeReasonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_large"
        android:paddingStart="@dimen/activity_margin_short"
        android:paddingEnd="@dimen/activity_margin_short"
        android:text="@string/welcome_reason"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeReasonImageView" />

    <Spinner
        android:id="@+id/welcomeReasonSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_pill"
        android:layout_marginTop="@dimen/activity_margin_medium"
        android:paddingStart="@dimen/activity_margin_medium"
        android:paddingTop="@dimen/activity_margin_medium"
        android:paddingEnd="@dimen/activity_margin_tiny"
        android:paddingBottom="@dimen/activity_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeReasonTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_medium"
        android:paddingStart="@dimen/activity_margin_medium"
        android:paddingEnd="@dimen/activity_margin_medium"
        android:gravity="center"
        android:text="@string/welcome_reason_hint"
        app:layout_constraintEnd_toEndOf="@+id/welcomeReasonSpinner"
        app:layout_constraintStart_toStartOf="@+id/welcomeReasonSpinner"
        app:layout_constraintTop_toBottomOf="@+id/welcomeReasonSpinner" />

    <Button
        android:id="@+id/welcomeReasonPreviousButton"
        android:layout_width="@dimen/activity_pager_button_width"
        android:layout_height="@dimen/activity_pager_button_height"
        android:layout_marginBottom="@dimen/activity_margin_medium"
        android:layout_marginStart="@dimen/activity_margin_medium"
        android:text="@string/welcome_button_previous"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/welcomeReasonNextButton"
        android:layout_width="@dimen/activity_pager_button_width"
        android:layout_height="@dimen/activity_pager_button_height"
        android:layout_marginBottom="@dimen/activity_margin_medium"
        android:layout_marginEnd="@dimen/activity_margin_medium"
        android:text="@string/welcome_button_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>